--- a/result.html
+++ b/result.html
@@ -35,6 +35,6 @@
 
   <script>
     // You can also require other files to run in this process   
-    require('./result.js')
+    require('./js/result.js')
   </script>
 </html>
