--- a/scan.html
+++ b/scan.html
@@ -43,6 +43,6 @@
 
   <script>
     // You can also require other files to run in this process
-    require('./renderer.js');
+    require('./js/scan.js');
   </script>
 </html>
