--- a/scan.html
+++ b/scan.html
@@ -21,22 +21,21 @@
       #by{
         margin-top: 10%;
       }
-      #exitbtn{
+      .menubtn{
         margin: 10px;
       }
     </style>
   </head>
   <body>
-  <img class="pull-right" id="exitbtn" src="imgs/x.png">
+  <img class="pull-right menubtn" id="exit" src="imgs/x.png">
+  <img class="pull-right menubtn" id="setting" src="imgs/settings.png">
   <br />
     <h1 class="text-center" id="title">Daiki Aomine</h1>
     <div class="text-center">
-      <div class="form-group">
         <label class="help-block">Please choose file to scan </label>
         <input type="button" class="btn btn-info" id="up" value="Choose File!">
         <p class="help-block">this program working by virustotal API!</p>
-      </div>
-      <input type="button" class="btn btn-success" id="scanbtn" value="Scan !">
+       <input type="button" class="btn btn-success" id="scanbtn" value="Scan !">
     </div>
     <p class="text-center" id="by">by <a id="mysite" href="#">Ahmed Hassan</a></p>
   </body>
