--- a/setting.html
+++ b/setting.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Daiki Aomine - Result</title>
+    <title>Daiki Aomine - Setting</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <style type="text/css">
       body{
@@ -18,23 +18,15 @@
   <body>
 
     <div class="container">
-    <h4 id="title">Result :</h4>
-    <table id="result_table" class="table">
-    <thead>
-      <tr>
-        <th>Antivirus</th>
-        <th>Result</th>
-      </tr>
-    </thead>
-    <tbody>
-
-    </tbody>
-  </table> 
-  </div>
+      <h5 id="title">API Key</h5>
+        <input type="text" class="form-control" id="apikey" placeholder="API Key here">
+        <br />
+        <input type="button" class="btn btn-success" id="save" value="Save">
+    </div>
 </body>
 
   <script>
     // You can also require other files to run in this process   
-    require('./js/result.js')
+    require('./js/setting.js')
   </script>
 </html>
